test/core/errors/sql_tables_error/zs/duplicated_field_name_error.zs
package duplicated_field_name_error;

sql_table TestTable
{
    int32   columnA;
    int32   columnB;
    uint32  columnA;
};
